<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz Race</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="numbers">Numbers</string>
    <string name="algebra">Algebra</string>
    <string name="powers">Powers</string>
    <string name="areas">Areas</string>
    <string name="series">Series</string>
    <string name="fractions">Fractions</string>
    <string name="selectMode">Select Mode:</string>
    <string name="bluetoothMode">Bluetooth</string>
    <string name="singleUserMode">Single User</string>
    <string name="backspace">Backspace</string>
    
    <string name="menu_settings">Settings</string>
    <string name="spanish">Spanish</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="go">Go</string>
    
</resources>
