<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectMode" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <Button
	        android:id="@+id/bluetoothModeButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bluetoothMode" />

	    <Button
	        android:id="@+id/singleUserModeButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/singleUserMode" />
	</LinearLayout>

</LinearLayout>