<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/laneALevel"
	        style="@style/QuizRaceFont"
	        android:text="@string/one"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        <jarden.app.race.LaneView
		 	android:id="@+id/laneA"
			android:layout_width="@dimen/laneWidth"
	        android:layout_height="@dimen/laneHeight" />
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/laneBLevel"
	        style="@style/QuizRaceFont"
	        android:text="@string/one"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        <jarden.app.race.LaneView
		 	android:id="@+id/laneB"
			android:layout_width="@dimen/laneWidth"
	        android:layout_height="@dimen/laneHeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/laneCLayout" >
	    <TextView
	        android:id="@+id/laneCLevel"
	        style="@style/QuizRaceFont"
	        android:text="@string/one"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        <jarden.app.race.LaneView
		 	android:id="@+id/laneC"
			android:layout_width="@dimen/laneWidth"
	        android:layout_height="@dimen/laneHeight" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/question"
	        style="@style/QuizRaceFont"
	        android:layout_width="wrap_content"
	        android:layout_weight="0"
	        android:layout_height="wrap_content" />

	    <EditText
	        android:id="@+id/answer"
	        style="@style/QuizRaceFont"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:imeOptions="actionGo"
	        android:inputType="number" />

    </LinearLayout>

</LinearLayout>